--- a/app/src/main/res/layout/activity_company_edit_profile.xml
+++ b/app/src/main/res/layout/activity_company_edit_profile.xml
@@ -47,6 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:hint="Company Name"
                     android:inputType="text"
                     android:textSize="14dp"/>
 
@@ -82,6 +83,7 @@
                     android:id="@+id/et_editCompanyAbout"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
+                    android:hint="Provide a short description"
                     android:textSize="14dp"
                     android:ems="10"
                     android:inputType="text|textMultiLine"
@@ -103,6 +105,7 @@
                     android:id="@+id/et_editCompanyContactNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="Contact Number"
                     android:ems="10"
                     android:inputType="text|number"
                     android:textSize="14dp"/>
@@ -120,6 +123,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:hint="Location"
                     android:textSize="14dp"
                     android:inputType="text"/>
 
@@ -135,6 +139,7 @@
                     android:id="@+id/et_editCompanyWebsite"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="Website"
                     android:textSize="14dp"
                     android:ems="10"
                     android:inputType="textUri"/>
