--- a/app/src/main/res/layout/item_internship.xml
+++ b/app/src/main/res/layout/item_internship.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="115dp"
     android:foreground="@drawable/border"
     card_view:cardCornerRadius="10dp"
     android:layout_marginBottom="10dp"
@@ -11,43 +11,44 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="10dp">
 
         <TextView
             android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Name"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="Name"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_title"
+            android:text="Company"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            android:text="Company"/>
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/text_function_type"
+            android:id="@+id/text_function"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_company"
+            android:text="Function"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            android:text="Function, Type"/>
+            android:textSize="16sp" />
 
-<!--        <TextView-->
-<!--            android:id="@+id/text_type"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@id/text_function"-->
-<!--            android:layout_marginStart="10dp"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:text="Type"/>-->
+        <TextView
+            android:id="@+id/text_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_function"
+            android:text="Type"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
