--- a/app/src/main/res/layout/item_company_internship.xml
+++ b/app/src/main/res/layout/item_company_internship.xml
@@ -19,7 +19,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/text_function"
@@ -27,7 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_title"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/text_type"
@@ -35,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_function"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:maxLines="1"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
