--- a/app/src/main/res/layout/item_company.xml
+++ b/app/src/main/res/layout/item_company.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/tv_industry"
@@ -26,7 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_companyName"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/tv_location"
@@ -34,7 +36,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_industry"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:maxLines="1"/>
     </RelativeLayout>
 
 <!--    <LinearLayout-->
