--- a/app/src/main/res/layout/item_experience.xml
+++ b/app/src/main/res/layout/item_experience.xml
@@ -21,7 +21,8 @@
             android:text="Experience Title"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/tv_experience_companyName"
@@ -29,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_experienceTitle"
             android:textColor="@color/black"
-            android:text="Company Name"/>
+            android:text="Company Name"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/tv_experience_duration"
